tests/negative/gold/interface4_test.gold
tests/negative/interface4_test.toit:5:13: error: Super of an interface must be an interface
interface A B:
            ^
Compilation failed.
